# devlog-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
devlog/: __init__.py  __main__.py  cli.py  collectors.py  config.py  differ.py  feishu.py  models.py  promoter.py  report.py  sanitizer.py  summarizer.py
docs/: architecture.md
tests/: test_cli.py  test_collectors.py  test_differ.py  test_feishu.py  test_promoter.py  test_sanitizer.py
