[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlog-cli"
version = "0.1.0"
description = "Local AI session capture & daily report CLI (Claude Code / Codex / Cursor → Feishu)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yanzhiyu.727" }]
keywords = ["ai", "daily-report", "claude-code", "codex", "cursor", "feishu", "devlog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/your-org/devlog-cli"
Issues   = "https://github.com/your-org/devlog-cli/issues"

[project.scripts]
devlog = "devlog.cli:main"

[tool.setuptools.packages.find]
include = ["devlog*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
